--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <input type="text" id="inputField"><br>
 
-    <input type="button" id="inputBtn" value="Submit">
+    <input type="button" id="inputBtn" onclick="vowelCount()" value="Submit">
     
     <script src="app.js"></script>
 </body>
